Use a Podspec template and a script to submit pods to staging or release

--- a/AudioKit.podspec.json.tmpl
+++ b/AudioKit.podspec.json.tmpl
@@ -1,6 +1,6 @@
 {
     "name": "AudioKit",
-    "version": "4.2.4",
+    "version": "__AK_VERSION__",
     "authors": {
         "Aurelius Prochazka": "audiokit@audiokit.io"
     },
@@ -13,7 +13,7 @@
     "documentation_url": "http://audiokit.io/docs/",
     "static_framework": true,
     "source": {
-        "http": "https://files.audiokit.io/releases/v4.2.4/AudioKit.framework.zip"
+        "http": "__AK_SOURCE__"
     },
     "summary": "Open-source audio synthesis, processing, & analysis platform.",
     "platforms": {
