Fixed macOS Recorder example

--- a/Examples/macOS/Recorder/Recorder/Base.lproj/Main.storyboard
+++ b/Examples/macOS/Recorder/Recorder/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -295,8 +295,8 @@
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <menu key="submenu" title="Transformations" id="c8a-y6-VQd">
                                                 <items>
-                                                    <menuItem title="Make Upper Case" id="vmV-6d-7jI">
-                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                    <menuItem title="Make Upper Case" keyEquivalent="" id="vmV-6d-7jI">
+                                                        <modifierMask key="keyEquivalentModifierMask" control="YES" option="YES" command="YES"/>
                                                         <connections>
                                                             <action selector="uppercaseWord:" target="Ady-hI-5gd" id="sPh-Tk-edu"/>
                                                         </connections>
@@ -735,6 +735,10 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="V7b-Yt-8ZI" customClass="AKOutputWaveformPlot" customModule="AudioKitUI">
                                 <rect key="frame" x="20" y="20" width="440" height="189"/>
                             </customView>
+                            <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mEo-dq-VsU" customClass="AKButton">
+                                <rect key="frame" x="325" y="229" width="135" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </customView>
                         </subviews>
                         <constraints>
                             <constraint firstItem="PBH-JP-nSy" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="2Sw-D3-aax"/>
@@ -745,7 +749,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="inputPlot" destination="V7b-Yt-8ZI" id="aC4-iS-PAe"/>
+                        <outlet property="button" destination="mEo-dq-VsU" id="Hg2-Aq-Fm0"/>
+                        <outlet property="inputPlot" destination="V7b-Yt-8ZI" id="cKn-Lp-yfX"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
