--- a/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Base.lproj/AKOscillatorBank.storyboard
+++ b/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Base.lproj/AKOscillatorBank.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Audio Unit View Controller-->
+        <!--Oscillator Bank View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AudioUnitViewController" customModule="AKOscillator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AKOscillatorBankViewController" customModule="AKOscillator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
