--- a/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Base.lproj/AKOscillatorBank.storyboard
+++ b/AudioUnits/iOS/Instruments/AKOscillatorBankExtension/Base.lproj/AKOscillatorBank.storyboard
@@ -15,39 +15,54 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AKOscillatorBankViewController" customModule="AKOscillator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="299"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="297-WQ-2Yj" customClass="AKSlider" customModule="AudioKitUI">
-                                <rect key="frame" x="20" y="20" width="241" height="38"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="297-WQ-2Yj" customClass="AKSlider" customModule="AudioKitUI">
+                                <rect key="frame" x="41" y="121" width="486" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5GY-p5-QaC" customClass="AKADSRView" customModule="AudioKitUI">
-                                <rect key="frame" x="45" y="66" width="576" height="154"/>
+                                <rect key="frame" x="559" y="13" width="452" height="273"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iis-n9-XA5">
-                                <rect key="frame" x="298" y="20" width="46" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="AudioKit Oscillator Demo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hz6-ep-GSH">
+                                <rect key="frame" x="20" y="20" width="212" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9IJ-zT-oLC"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                <color key="textColor" red="0.89635753630000004" green="0.89637857679999999" blue="0.89636725189999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fFW-r7-PFO" customClass="AKButton" customModule="AudioKitUI">
+                                <rect key="frame" x="41" y="57" width="252" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fLw-cf-YQs" customClass="AKSlider" customModule="AudioKitUI">
+                                <rect key="frame" x="41" y="211" width="486" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.043137254901960784" green="0.050980392156862744" blue="0.054901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="u2v-qu-mbu"/>
                     </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="1024" height="299"/>
                     <connections>
                         <outlet property="adsr" destination="5GY-p5-QaC" id="o1z-pN-n6M"/>
-                        <outlet property="slider" destination="297-WQ-2Yj" id="S4D-fl-dBK"/>
+                        <outlet property="vibratoDepthSlider" destination="297-WQ-2Yj" id="S4D-fl-dBK"/>
+                        <outlet property="vibratoRateSlider" destination="fLw-cf-YQs" id="9EO-oH-kCF"/>
+                        <outlet property="waveformButton" destination="fFW-r7-PFO" id="OVP-Ip-l0f"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="118.29085457271366" y="117.59999999999999"/>
+            <point key="canvasLocation" x="117.84107946026987" y="117.59999999999999"/>
         </scene>
     </scenes>
 </document>
